# profile-service

./: LICENSE  Makefile  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
migrations/: V001__constraints.cypher  V002__add_status.cypher  V003__add_status_index.cypher  migrate.py
src/: config.py  main.py
src/adapters/clients/: kafka_producer.py  keycloak.py
src/adapters/repository/: errors.py  profile_repository.py
src/adapters/repository/neo4j/: profile_repository.py  queries.py
src/adapters/repository/postgres/: profile_repository.py  queries.py
src/api/http/: dto.py  profile_router.py
src/api/kafka/: profile_consumer.py
src/models/: profile.py
src/services/: errors.py  profile_service.py  protocols.py
tests/: conftest.py
tests/integration/: conftest.py
tests/integration/adapters/repository/neo4j/: test_profile_repository.py
tests/integration/adapters/repository/postgres/: test_profile_repository.py
tests/unit/service/: test_profile_service.py
