[project]
name = "profile-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "psycopg[binary]>=3.2.0",
    "aiokafka>=0.12.0",
    "aiohttp>=3.11.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.12.0",
    "loguru>=0.7.0",
    "python-keycloak-async>=2.17.1",
    "neo4j>=6.0.0",
    "neo4j-python-migrations>=0.1.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=0.25.0",
    "testcontainers[postgres]>=4.0.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
